Agregando consulta de autenticacion

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -525,12 +525,14 @@
             // ==============================================================================================
             // Logout controller
             // ==============================================================================================
+
             // ==============================================================================================
             // Is auth controller
             // ==============================================================================================
-            function idLogged(){
+            (function (){
                 $.getJSON("https://cpromotion.herokuapp.com/logged_users/").done(function(data){
                     if( data.message === "logged"){
+                        consle.log(data);
                         $("#li-login, #li-register").css("display", "none");
                         $("#li-welcome").css("display", "block");
                     } else {
@@ -540,8 +542,7 @@
                 }).fail(function(jqxhr, textStatus, error) {
                     var err = textStatus + ", " + error;
                 });
-            }
-            idLogged();
+            })();
             // ==============================================================================================
             // Slider controller
             // ==============================================================================================
