--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -508,7 +508,7 @@
                         dataType: "json",
                         success: function(data){
                             console.log(data);
-                            window.location.href = "https://cpromotion.herokuapp.com/logged_users";
+                            window.location.href = "https://cpromotion.herokuapp.com/";
                         },
                         failure: function(errMessage){
                             console.log("Error enviando datos de registro");
