--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -442,13 +442,13 @@
                 e.preventDefault();
                 var promotionId = $(this).attr("id");
                 var splitId = promotionId.split("n");
-                console.log(splitId[1]);
                 $.getJSON("https://cpromotion.herokuapp.com/list_promotion").done(function(data){
                     var promotionData = data;
+
                     for(var i=0; i<promotionData.length; i++){
                         var getId = promotionData[i].pk;
                         if( parseInt(getId) === parseInt(splitId[1])){
-
+                            console.log(getId.fields);
                             $("#modal-promotion").html("").append(
                                 "<div class='modal fade modal-box' data-backdrop='static' data-keyboard='false' tabindex='-1' role='dialog'>" +
                                     "<div class='modal-dialog' role='document'>" +
@@ -474,6 +474,7 @@
                             console.log(getId + "esta es la promocion escogida");
                         }
                     }
+
                 }).fail(function (jqxhr, textStatus, error) {
                     var err = textStatus + ", " + error;
                 });
