--- a/promotions/templates/profile/index.html
+++ b/promotions/templates/profile/index.html
@@ -61,7 +61,7 @@
                     </a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="http://127.0.0.1:8000">Regresar a cPromotion</a></li>
+                    <li><a href="https://cpromotion.herokuapp.com/">Regresar a cPromotion</a></li>
                     <li><a href="#">Singout <i class="fas fa-sign-out-alt"></i></a></li>
                 </ul>
             </div>
