--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -199,7 +199,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="#">Menu de usuario:</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><a href="http://127.0.0.1:8000/profile/">Profile</a></li>
+                                    <li><a href="https://cpromotion.herokuapp.com/profile/">Profile</a></li>
                                     <li><a href="#">Promociones</a></li>
                                     <li><a href="#">Categorías</a></li>
                                     <li role="separator" class="divider"></li>
@@ -431,7 +431,7 @@
             // ==============================================================================================
             var getData;
 
-            $.getJSON("http://127.0.0.1:8000/list_promotion").done(function(data){
+            $.getJSON("https://cpromotion.herokuapp.com/list_promotion").done(function(data){
                 getData = data;
                 var colorCtr = 0;
                 console.log(getData);
@@ -497,7 +497,7 @@
                 e.preventDefault();
                 var promotionId = $(this).attr("id");
                 var splitId = promotionId.split("n");
-                $.getJSON("http://127.0.0.1:8000/list_promotion").done(function(data){
+                $.getJSON("https://cpromotion.herokuapp.com/list_promotion").done(function(data){
                     var promotionData = data;
                     // ======================================================================================
                     // Recorre el json para buscar cual es la promocion a consultar
