--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -543,6 +543,17 @@
                                                                 "</div>" +
                                                             "</div>" +
                                                         "</div>" +
+                                                        "<div class='row'>"+
+                                                            "<div class='col-md-4'> hgfhgfhf"+
+
+                                                            "</div>" +
+                                                            "<div class='col-md-4'> jhgjhgjh"+
+
+                                                            "</div>" +
+                                                            "<div class='col-md-4'>"+
+                                                            "</div>" +
+                                                        "</div>" +
+
                                                     "</div>" +
                                                 "</div>" +
 
