Agregando estilos al modal de las promociones

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -557,6 +557,21 @@
                                                     "<div class='col-md-4'>"+
                                                     "</div>" +
                                                 "</div>" +
+                                                "<hr>" +
+                                                "<div class='panel panel-default'>" +
+                                                    "<div class='panel-body'> " +
+                                                        "<div class='email-message'>"+
+                                                            "<div class='input-group'>" +
+                                                              "<span class='input-group-addon' id='basic-addon1'>@</span>" +
+                                                              "<input type='email' class='form-control' placeholder='Emai' aria-describedby='basic-addon1'>" +
+                                                            "</div>" +
+                                                        "</div>" +
+                                                        "<div class='email-message'>"+
+                                                            "<textarea class='form-control' rows='3'></textarea>" +
+                                                        "</div>" +
+                                                    "</div>" +
+                                                "</div>" +
+
                                             "</div>" +
                                             "<div class='modal-footer'>" +
                                                 "<button type='button' class='btn btn-default close-modal' data-dismiss='modal'>Close</button>" +
