Agregando estilos al modal de las promociones

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -558,6 +558,7 @@
                                                     "</div>" +
                                                 "</div>" +
                                                 "<hr>" +
+                                                "<div class='promo-message-tittle'><h4>Agrega un comentario:</h4></div>" +
                                                 "<div class='panel panel-default'>" +
                                                     "<div class='panel-body'> " +
                                                         "<div class='email-message'>"+
