Agregando estilos al modal de las promociones

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -563,12 +563,21 @@
                                                     "<div class='panel-body'> " +
                                                         "<div class='email-message'>"+
                                                             "<div class='input-group'>" +
-                                                              "<span class='input-group-addon' id='basic-addon1'>@</span>" +
+                                                              "<span class='input-group-addon' id='basic-addon1'>Email</span>" +
                                                               "<input type='email' class='form-control' placeholder='Emai' aria-describedby='basic-addon1'>" +
                                                             "</div>" +
                                                         "</div>" +
                                                         "<div class='email-message'>"+
                                                             "<textarea class='form-control' rows='3'></textarea>" +
+                                                        "</div>" +
+                                                        "<hr>" +
+                                                        "<div class='panel panel-default'>" +
+                                                            "<div class='panel-body'> " +
+                                                                "<div class='form-group'>" +
+                                                                    "<label for='exampleInputEmail1'>Pedro perez: </label>" +
+                                                                    "<div class='promo-message-tittle'>Mensaje de pedro perez respecto a esta promocion.</div>" +
+                                                                "</div>" +
+                                                            "</div>" +
                                                         "</div>" +
                                                     "</div>" +
                                                 "</div>" +
