Agregando estilos al modal de las promociones

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -571,6 +571,7 @@
                                                             "<textarea class='form-control' rows='3'></textarea>" +
                                                         "</div>" +
                                                         "<hr>" +
+                                                        "<div class='promo-message-added'><h5>Mensajes agregados:</h5></div>" +
                                                         "<div class='panel panel-default'>" +
                                                             "<div class='panel-body'> " +
                                                                 "<div class='form-group'>" +
