Agregando estilos al modal de las promociones

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -548,13 +548,13 @@
                                                 "</div>" +
                                                 "<hr>" +
                                                 "<div class='row'>"+
-                                                    "<div class='col-md-4'> hgfhgfhf"+
-
+                                                    "<div class='col-md-3'> "+
+                                                        "<div class='promo-category'>Nombre Categoria.</div>" +
                                                     "</div>" +
-                                                    "<div class='col-md-4'> jhgjhgjh"+
-
+                                                    "<div class='col-md-3'> jhgjhgjh"+
+                                                        "<a href+'#' class='promo-favoritos'><i class='fas fa-thumbs-up'></i> like</a>" +
                                                     "</div>" +
-                                                    "<div class='col-md-4'>"+
+                                                    "<div class='col-md-6'>"+
                                                     "</div>" +
                                                 "</div>" +
                                                 "<hr>" +
