Agregando estilos al modal de las promociones

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -548,12 +548,14 @@
                                                 "</div>" +
                                                 "<hr>" +
                                                 "<div class='row'>"+
-                                                    "<div class='col-md-3'> "+
+                                                    "<div class='col-md-2'> "+
                                                         "<div class='promo-category'>Nombre Categoria.</div>" +
                                                     "</div>" +
-                                                    "<div class='col-md-3'> jhgjhgjh"+
+                                                    "<div class='col-md-1'> | </div>"+
+                                                    "<div class='col-md-2'>"+
                                                         "<a href+'#' class='promo-favoritos'><i class='fas fa-thumbs-up'></i> like</a>" +
                                                     "</div>" +
+                                                    "<div class='col-md-1'> | </div>"+
                                                     "<div class='col-md-6'>"+
                                                     "</div>" +
                                                 "</div>" +
