Agregando estilos al modal de las promociones

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -151,6 +151,9 @@
             left: 0;
             padding: 10px;
         }
+        .email-message {
+            margin-bottom: 15px;
+        }
         footer {
             background-color: #EEEEEE;
             height: 300px;
