Agregando estilos al modal de las promociones

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -554,11 +554,11 @@
                                                     "<div class='col-md-2'> "+
                                                         "<div class='promo-category'>Nombre Categoria.</div>" +
                                                     "</div>" +
-                                                    "<div class='col-md-1'> | </div>"+
+                                                    "<div class='col-md-1' style='width:24px'> | </div>"+
                                                     "<div class='col-md-1'>"+
                                                         "<a href+'#' class='promo-favoritos'><i class='fas fa-thumbs-up'></i> like</a>" +
                                                     "</div>" +
-                                                    "<div class='col-md-1'> | </div>"+
+                                                    "<div class='col-md-1' style='width:24px'> | </div>"+
                                                     "<div class='col-md-7'>"+
                                                     "</div>" +
                                                 "</div>" +
